--- a/style.css
+++ b/style.css
@@ -18,3 +18,29 @@ body {
 		background-position: 0% 50%;
 	}
 }
+
+.pfp {
+    border-radius: 45px;
+    margin-left: auto;
+    margin-right: auto;
+    animation: colorFade 5s infinite;
+ }
+
+ @keyframes colorFade {
+    0% {
+      box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
+    }
+    50% {
+      box-shadow: 0px 0px 60px 10px #ff009d;
+    }
+    100% {
+      box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
+    }
+  }
+
+ .pfpdiv {
+    display: block;
+    margin-left: auto;
+    width: 15em;
+    margin-right: auto 
+}
