--- a/style.css
+++ b/style.css
@@ -69,6 +69,14 @@ body {
     margin-right: auto 
 }
 
+.boxes {
+    box-shadow: 0 0 96px rgba(255,255,255,0.025),0 0 64px rgba(255,255,255,0.025),0 0 32px rgba(255,255,255,0.025);
+    border: solid 2px rgba(255,255,255,0.04);
+    border-radius: 16px;
+    padding: var(--chakra-space-6);
+    display: inline-block;
+  }
+
 .bio {
     text-align: center;
     color: white
