--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ body {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    box-shadow: 0px 0px 15px 5px #dbc1ac;
   }
   
   .button:hover,
