Refactor styling and add border radius to blue div

--- a/style.css
+++ b/style.css
@@ -65,19 +65,19 @@ body {
 
  @keyframes colorFade {
     0% {
-      box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
+      box-shadow: 0px 0px 30px 10px rgb(255, 131, 249);
     }
     25% {
-      box-shadow: 0px 0px 60px 10px #7fe5ff;
+      box-shadow: 0px 0px 30px 10px #7fe5ff;
     }
     50% {
-      box-shadow: 0px 0px 60px 10px #ffffff;
+      box-shadow: 0px 0px 30px 10px #ffffff;
     }
     75% {
-        box-shadow: 0px 0px 60px 10px #7fe5ff;
+        box-shadow: 0px 0px 30px 10px #7fe5ff;
     }
     100% {
-        box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
+        box-shadow: 0px 0px 30px 10px rgb(255, 131, 249);
     }
   }
 
@@ -106,10 +106,6 @@ body {
   .boxes-container {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
-
-  .boxes {
-    margin: 10px !important;
-  }
 }
 @media screen and (min-width: 601px) {
   .boxes-container {
@@ -135,6 +131,7 @@ body {
     margin: 35px;
     padding: 10px;
     text-align: center;
+    word-wrap: break-word;
     transition: 0.3s;
   }
 
@@ -168,7 +165,7 @@ body {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    box-shadow: 0px 0px 15px 5px #dbc1ac;
+    box-shadow: 0px 0px 6px 5px #dbc1ac;
   }gojofartporn
 .bio {
     text-align: center;
@@ -183,10 +180,12 @@ body {
   margin: auto;
 }
 	
-
 .containertrans {
+  border-radius: 16px;
   animation: colorFade 10s infinite;  
 }
+
+
 
 .snowflake {
   color: #fff;
@@ -198,23 +197,25 @@ body {
 @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
 
 
+
 #blue {
-  width:auto;
-  height:20px;
-  background:#9fc1ff;
+  width: auto;
+  height: 20px;
+  background-color: #9fc1ff;
 }
 
 #pink {
-  width:auto;
-  height:20px;
-  background:#ff79ad;
+  width: auto;
+  height: 20px;
+  background-color: #ff79ad;
 }
 
 #white {
-  width:auto;
-  height:20px;
-  background:#ffffff;
+  width: auto;
+  height: 20px;
+  background-color: #ffffff;
 }
+
 
 
 .settingspanel {
