--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
+  place-items: center;
 }
 
 @media screen and (max-width: 600px) {
