--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ img[src=""] {
 
 .boxes {
   backdrop-filter: blur(40px);
+  width: 85%;
   max-width: 400px;
   box-shadow: 0 0 96px rgba(255, 255, 255, 0.025), 0 0 64px rgba(255, 255, 255, 0.025), 0 0 32px rgba(255, 255, 255, 0.025);
   border: solid 2px rgba(255, 255, 255, 0.04);
