--- a/style.css
+++ b/style.css
@@ -376,7 +376,22 @@ img[src=""] {
   background-color: #ffffff;
 }
 
+.highlight {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  animation: highlight 2s ease-in-out;
+}
 
+@keyframes highlight {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 
 .settingspanel {
   position: fixed !important;
